@@ -2,7 +2,7 @@ package com.uid2.admin.job.jobsync.client;
 
 import com.fasterxml.jackson.databind.ObjectWriter;
 import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSet;
+import com.uid2.admin.legacy.LegacyClientKey;
 import com.uid2.admin.store.Clock;
 import com.uid2.admin.store.FileManager;
 import com.uid2.admin.store.InstantClock;
@@ -20,11 +20,10 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import java.time.Instant;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.HashSet;
+import java.util.*;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertAll;
 
 class ClientKeySyncJobTest {
     private final CloudPath globalSiteMetadataPath = new CloudPath("/some/test/path/clients/metadata.json");
@@ -32,7 +31,6 @@ class ClientKeySyncJobTest {
     private final Integer scopedSiteId = 10;
     private final ImmutableList<OperatorKey> operators = ImmutableList.of(
             new OperatorKey(
-                    "key",
                     "keyHash",
                     "keySalt",
                     "name",
@@ -41,9 +39,11 @@ class ClientKeySyncJobTest {
                     1618873215,
                     false,
                     scopedSiteId,
-                    new HashSet<>(Collections.singletonList(Role.OPERATOR)),
-                    OperatorType.PRIVATE));
-    private final ClientKey client = new ClientKey(
+                    Set.of(Role.OPERATOR),
+                    OperatorType.PRIVATE
+            )
+    );
+    private final LegacyClientKey client = new LegacyClientKey(
             "key",
             "keyHash",
             "keySalt",
@@ -51,21 +51,21 @@ class ClientKeySyncJobTest {
             "name",
             "contact",
             Instant.MIN,
-            ImmutableSet.of(Role.OPERATOR),
+            Set.of(Role.OPERATOR),
             scopedSiteId,
-            false);
+            false
+    );
+
     private ClientKeyStoreFactory clientKeyStoreFactory;
     private FileManager fileManager;
 
-    ClientKeySyncJobTest() {
-    }
-
     @BeforeEach
-    void setUp() {
+    public void setup() {
         InMemoryStorageMock cloudStorage = new InMemoryStorageMock();
         FileStorageMock fileStorage = new FileStorageMock(cloudStorage);
         Clock clock = new InstantClock();
         VersionGenerator versionGenerator = new EpochVersionGenerator(clock);
+
         fileManager = new FileManager(cloudStorage, fileStorage);
         clientKeyStoreFactory = new ClientKeyStoreFactory(
                 cloudStorage,
@@ -73,15 +73,16 @@ class ClientKeySyncJobTest {
                 objectWriter,
                 versionGenerator,
                 clock,
-                fileManager);
+                fileManager
+        );
     }
 
     @Test
     public void doesNotSyncClientsThatAreNotChanged() throws Exception {
-        clientKeyStoreFactory.getWriter(scopedSiteId).upload(ImmutableList.of(client), null);
-        clientKeyStoreFactory.getGlobalWriter().upload(ImmutableList.of(client), null);
+        clientKeyStoreFactory.getWriter(scopedSiteId).upload(List.of(client), null);
+        clientKeyStoreFactory.getGlobalWriter().upload(List.of(client), null);
 
-        StoreReader<Collection<ClientKey>> reader = clientKeyStoreFactory.getReader(scopedSiteId);
+        StoreReader<Collection<LegacyClientKey>> reader = clientKeyStoreFactory.getReader(scopedSiteId);
         reader.loadContent();
         Long oldVersion = reader.getMetadata().getLong("version");
 
@@ -89,15 +90,17 @@ class ClientKeySyncJobTest {
                 fileManager,
                 clientKeyStoreFactory,
                 MultiScopeStoreWriter::areCollectionsEqual),
-                ImmutableList.of(client), operators
+                List.of(client),
+                operators
         );
-
         job.execute();
 
         reader.loadContent();
-        assertThat(reader.getAll()).containsExactly(client);
-        Long newVersion = reader.getMetadata().getLong("version");
-        assertThat(newVersion).isEqualTo(oldVersion);
-    }
 
+        assertAll(
+                "doesNotSyncClientsThatAreNotChanged",
+                () -> assertThat(reader.getAll()).containsExactly(client),
+                () -> assertThat(reader.getMetadata().getLong("version")).isEqualTo(oldVersion)
+        );
+    }
 }
